Update submodule to point at fork and use 'develop' branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "PNG-to-ICO"]
 	path = PNG-to-ICO
-	url = https://github.com/FoxP/PNG-to-ICO.git
+	url = https://github.com/joelvaneenwyk/PNG-to-ICO.git
+	branch = develop
