--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,7 @@ charset = utf-8
 end_of_line = crlf
 indent_size = 2
 indent_style = space
+
+[*.{yml,yaml}]
+indent_size = 2
+indent_style = space
